--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "cd client && npm install && npm run build",
     "dev": "nodemon index.js"
   },
   "keywords": [],
