--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "autoprefixer": "^9.8.6",
+    "express": "^4.17.1",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "engines": {
     "node": "16.1.0"
