--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "express": "^4.17.1",
+    "pg": "^8.6.0",
     "postcss": "^7.0.35",
+    "sequelize": "^6.6.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "engines": {
